--- a/Templates/inicio.html
+++ b/Templates/inicio.html
@@ -1,4 +1,93 @@
+<link rel="stylesheet" href="/Styles/inicio.css">
 <div id="inicio" class="">
-    <h2>Página de inicio</h2>
-    <!-- Contenido de la sección de inicio -->
-  </div>
+  <!-- Primera sección -->
+  <section>
+    <div class="firstSection">
+      <div class="firstSectionInfo">
+        <div class="textDivs">
+          <h3 class="textDivTitle">
+            Servicio de redacción académica de calidad
+          </h3>
+          <p class="textDivBody">
+            Confía en nosotros para completar tu tesis y trabajos
+            universitarios. Nuestro equipo de expertos está listo
+            para ayudarte a alcanzar el éxito académico
+          </p>
+        </div>
+        <div class="boxInfoDivs">
+          <div class="boxInfoDivOne">
+            <img src="/Media/inicio/seccion 1 cubos.png">
+            <p class="boxInfoDivsSubtitle">
+              Calidad garantizada
+            </p>
+            <p class="boxInfoDivsText">
+              Entregamos trabajos de alta calidad que cumplen
+              con tus requisitos académicos y expectativas.
+            </p>
+          </div>
+          <div class="boxInfoDivTwo">
+            <img src="/Media/inicio/seccion 1 cubos.png">
+            <p class="boxInfoDivsSubtitle">
+              Entrega puntual
+            </p>
+            <p class="boxInfoDivsText">
+              Cumplimos con los plazos establecidos para que
+              puedas entregar tus trabajos a tiempo.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="secondSectionImage">
+        <img src="/Media/inicio/seccion 1 inicio.jpg">
+      </div>
+    </div>
+  </section>
+
+  <!-- Segunda sección -->
+  <section class="secondSection">
+    <div class="secondSectionSeparator">
+
+    </div>
+    <div class="secondSectionBody">
+      <div class="secondSectionUp">
+        <div class="secondSectionLeffText">
+          <p><span>Nuestra pasión</span> por la excelencia académica se refleja en todo lo que hacemos. Creemos que cada
+            tarea,
+            ensayo o proyecto académico es una oportunidad para demostrar nuestra dedicación a la calidad, la integridad
+            y la excelencia en el servicio al cliente.</p>
+        </div>
+        <div class="secondSectionRightCards">
+          <article class="card">
+            <img class="card__background" src="/Media/inicio/seccion 2 righ vision.jpg" width="1920" height="2193" />
+            <div class="card__content | flow">
+              <div class="card__content--container | flow">
+                <h2 class="card__title">Visión</h2>
+                <p class="card__description">
+                  Ser la principal opción para estudiantes universitarios en busca de servicios de redacción, destacando
+                  por nuestra calidad excepcional, compromiso con la integridad académica y apoyo integral para el éxito
+                  educativo.
+                </p>
+              </div>
+            </div>
+          </article>
+          <article class="card">
+            <img class="card__background" src="/Media/inicio/seccion 2 righ mision.jpg" width="1920" height="2193" />
+            <div class="card__content | flow">
+              <div class="card__content--container | flow">
+                <h2 class="card__title">Misión</h2>
+                <p class="card__description">
+                  Proporcionar servicios de redacción de alta calidad y éticos que ayuden a los estudiantes
+                  universitarios a alcanzar sus objetivos académicos. Nos comprometemos a ofrecer un trabajo
+                  personalizado, confiable y oportuno, basado en la confianza y la excelencia.
+                </p>
+              </div>
+            </div>
+          </article>
+        </div>
+      </div>
+    </div>
+    <div class="secondSectionSeparator separatorDown">
+
+    </div>
+  </section>
+</div>
