--- a/Templates/inicio.html
+++ b/Templates/inicio.html
@@ -1,4 +1,3 @@
-<link rel="stylesheet" href="/Styles/inicio.css">
 <div id="inicio" class="">
   <!-- Primera sección -->
   <section>
@@ -90,4 +89,67 @@
 
     </div>
   </section>
+  <!-- Tercera sección -->
+  <section class="sectionThree">
+    <div class="sectionThreePros">
+      <h2>Descubre los beneficios de obtener ayuda académica en el CEAC</h2>
+      <div class="sectionThreeProsSeparator"></div>
+    </div>
+    <div class="sectionThreeSlider">
+      <div class="slider">
+        <div class="item">
+          <h3>Cumplimiento de plazos 1</h3>
+          <p>Sabemos lo importante que es cumplir con los plazos académicos. Con nuestros servicios, puedes estar seguro
+            de
+            que
+            tus trabajos se entregarán puntualmente, permitiéndote cumplir con tus compromisos académicos de manera
+            oportuna.</p>
+        </div>
+        <div class="item">
+          <h3>Cumplimiento de plazos 2</h3>
+          <p>Sabemos lo importante que es cumplir con los plazos académicos. Con nuestros servicios, puedes estar seguro
+            de
+            que
+            tus trabajos se entregarán puntualmente, permitiéndote cumplir con tus compromisos académicos de manera
+            oportuna.</p>
+        </div>
+        <div class="item">
+          <h3>Cumplimiento de plazos 3</h3>
+          <p>Sabemos lo importante que es cumplir con los plazos académicos. Con nuestros servicios, puedes estar seguro
+            de
+            que
+            tus trabajos se entregarán puntualmente, permitiéndote cumplir con tus compromisos académicos de manera
+            oportuna.</p>
+        </div>
+        <div class="item">
+          <h3>Cumplimiento de plazos 4</h3>
+          <p>Sabemos lo importante que es cumplir con los plazos académicos. Con nuestros servicios, puedes estar seguro
+            de
+            que
+            tus trabajos se entregarán puntualmente, permitiéndote cumplir con tus compromisos académicos de manera
+            oportuna.</p>
+        </div>
+        <div class="item">
+          <h3>Cumplimiento de plazos 5</h3>
+          <p>Sabemos lo importante que es cumplir con los plazos académicos. Con nuestros servicios, puedes estar seguro
+            de
+            que
+            tus trabajos se entregarán puntualmente, permitiéndote cumplir con tus compromisos académicos de manera
+            oportuna.</p>
+        </div>
+        <div class="item">
+          <h3>Cumplimiento de plazos 6</h3>
+          <p>Sabemos lo importante que es cumplir con los plazos académicos. Con nuestros servicios, puedes estar seguro
+            de
+            que
+            tus trabajos se entregarán puntualmente, permitiéndote cumplir con tus compromisos académicos de manera
+            oportuna.</p>
+        </div>
+        <button id="next">&#x2b62;</button>
+        <button id="prev">&#x2b60;</button>
+      </div>
+    </div>
+  </section>
 </div>
+
+
