--- a/Templates/inicio.html
+++ b/Templates/inicio.html
@@ -98,7 +98,18 @@
     <div class="sectionThreeSlider">
       <div class="slider">
         <div class="item">
-          <h3>Cumplimiento de plazos 1</h3>
+          <h3>Excelencia académica</h3>
+          <p>Nuestros trabajos cumplen rigurosos estándares de calidad. Somos expertos en redacción
+            académica por lo que garantizamos que cada trabajo sea impecable, bien investigado y cumpla con las normas
+            académicas requeridas.</p>
+        </div>
+        <div class="item">
+          <h3>Autenticidad asegurada</h3>
+          <p>Nos comprometemos a proporcionar trabajos totalmente originales, libres de plagio. En CEAC, cada trabajo se
+            crea desde cero para asegurar la autenticidad y la integridad académica.</p>
+        </div>
+        <div class="item">
+          <h3>Cumplimiento de plazos</h3>
           <p>Sabemos lo importante que es cumplir con los plazos académicos. Con nuestros servicios, puedes estar seguro
             de
             que
@@ -106,44 +117,29 @@
             oportuna.</p>
         </div>
         <div class="item">
-          <h3>Cumplimiento de plazos 2</h3>
-          <p>Sabemos lo importante que es cumplir con los plazos académicos. Con nuestros servicios, puedes estar seguro
-            de
-            que
-            tus trabajos se entregarán puntualmente, permitiéndote cumplir con tus compromisos académicos de manera
-            oportuna.</p>
+          <h3>Atención personalizada</h3>
+          <p>Tu satisfacción es nuestra prioridad. Nuestro equipo de atención al cliente está disponible para brindarte
+            asistencia personalizada en cualquier etapa del proceso, garantizando una experiencia fluida y sin
+            contratiempos.</p>
         </div>
         <div class="item">
-          <h3>Cumplimiento de plazos 3</h3>
-          <p>Sabemos lo importante que es cumplir con los plazos académicos. Con nuestros servicios, puedes estar seguro
-            de
-            que
-            tus trabajos se entregarán puntualmente, permitiéndote cumplir con tus compromisos académicos de manera
-            oportuna.</p>
+          <h3>Soporte y seguimiento</h3>
+          <p>No solo te entregamos un trabajo terminado, también te acompañamos durante todo el proceso. Puedes
+            comunicarte con nosotros en cualquier momento para resolver tus dudas o solicitar avances. Te mantendremos
+            informado sobre el estado de tu trabajo y te daremos soporte hasta que estés satisfecho.</p>
         </div>
         <div class="item">
-          <h3>Cumplimiento de plazos 4</h3>
-          <p>Sabemos lo importante que es cumplir con los plazos académicos. Con nuestros servicios, puedes estar seguro
-            de
-            que
-            tus trabajos se entregarán puntualmente, permitiéndote cumplir con tus compromisos académicos de manera
-            oportuna.</p>
+          <h3>Privacidad y seguridad</h3>
+          <p>Respetamos la confidencialidad y protegemos tus datos personales. No compartimos tu información con
+            terceros ni
+            la usamos para fines ajenos a nuestros servicios. Además, usamos sistemas de encriptación y seguridad para
+            garantizar la protección de tus trabajos.</p>
         </div>
         <div class="item">
-          <h3>Cumplimiento de plazos 5</h3>
-          <p>Sabemos lo importante que es cumplir con los plazos académicos. Con nuestros servicios, puedes estar seguro
-            de
-            que
-            tus trabajos se entregarán puntualmente, permitiéndote cumplir con tus compromisos académicos de manera
-            oportuna.</p>
-        </div>
-        <div class="item">
-          <h3>Cumplimiento de plazos 6</h3>
-          <p>Sabemos lo importante que es cumplir con los plazos académicos. Con nuestros servicios, puedes estar seguro
-            de
-            que
-            tus trabajos se entregarán puntualmente, permitiéndote cumplir con tus compromisos académicos de manera
-            oportuna.</p>
+          <h3>Aprendizaje y crecimiento</h3>
+          <p>No solo te entregamos un trabajo de calidad, sino que también te brindamos retroalimentación y orientación
+            para que puedas mejorar tus habilidades académicas. Con nosotros, podrás aprender de los mejores y crecer
+            como estudiante e investigador.</p>
         </div>
         <button id="next">&#x2b62;</button>
         <button id="prev">&#x2b60;</button>
@@ -151,5 +147,3 @@
     </div>
   </section>
 </div>
-
-
