--- a/Templates/inicio.html
+++ b/Templates/inicio.html
@@ -75,9 +75,9 @@
               <div class="card__content--container | flow">
                 <h2 class="card__title">Misión</h2>
                 <p class="card__description">
-                  Proporcionar servicios de redacción de alta calidad y éticos que ayuden a los estudiantes
-                  universitarios a alcanzar sus objetivos académicos. Nos comprometemos a ofrecer un trabajo
-                  personalizado, confiable y oportuno, basado en la confianza y la excelencia.
+                  Brindar servicios éticos y de calidad en redacción académica, apoyando a los universitarios en sus
+                  metas educativas. Ofrecemos trabajos personalizados, confiables y puntuales, basados en la confianza y
+                  la excelencia.
                 </p>
               </div>
             </div>
