--- a/Templates/inicio.html
+++ b/Templates/inicio.html
@@ -124,22 +124,19 @@
         </div>
         <div class="item">
           <h3>Soporte y seguimiento</h3>
-          <p>No solo te entregamos un trabajo terminado, también te acompañamos durante todo el proceso. Puedes
-            comunicarte con nosotros en cualquier momento para resolver tus dudas o solicitar avances. Te mantendremos
-            informado sobre el estado de tu trabajo y te daremos soporte hasta que estés satisfecho.</p>
+          <p>Te asistimos en todo el proceso de tu trabajo. Estamos disponibles para atender tus consultas o avances. Te
+            informamos sobre tu proyecto y te apoyamos hasta tu satisfacción.</p>
         </div>
         <div class="item">
           <h3>Privacidad y seguridad</h3>
-          <p>Respetamos la confidencialidad y protegemos tus datos personales. No compartimos tu información con
+          <p>Respetamos la confidencialidad y protegemos tus datos. No compartimos tu información con
             terceros ni
-            la usamos para fines ajenos a nuestros servicios. Además, usamos sistemas de encriptación y seguridad para
-            garantizar la protección de tus trabajos.</p>
+            la usamos para fines ajenos a nuestros servicios. Además, encriptamos y aseguramos tus trabajos.</p>
         </div>
         <div class="item">
           <h3>Aprendizaje y crecimiento</h3>
-          <p>No solo te entregamos un trabajo de calidad, sino que también te brindamos retroalimentación y orientación
-            para que puedas mejorar tus habilidades académicas. Con nosotros, podrás aprender de los mejores y crecer
-            como estudiante e investigador.</p>
+          <p>No solo te entregamos un trabajo de calidad, también te brindamos retroalimentación y orientación
+            para que mejores tus habilidades investigativas. Con nosotros, podrás aprender y crecer exponencialmente.</p>
         </div>
         <button id="next">&#x2b62;</button>
         <button id="prev">&#x2b60;</button>
