--- a/Templates/inicio.html
+++ b/Templates/inicio.html
@@ -110,11 +110,8 @@
         </div>
         <div class="item">
           <h3>Cumplimiento de plazos</h3>
-          <p>Sabemos lo importante que es cumplir con los plazos académicos. Con nuestros servicios, puedes estar seguro
-            de
-            que
-            tus trabajos se entregarán puntualmente, permitiéndote cumplir con tus compromisos académicos de manera
-            oportuna.</p>
+          <p>Sabemos lo importante que es cumplir los plazos académicos. Nuestros servicios te permiten estar seguro de
+            tus trabajos se entregarán puntualmente, permitiéndote cumplir tus compromisos académicos oportuna.</p>
         </div>
         <div class="item">
           <h3>Atención personalizada</h3>
@@ -136,10 +133,11 @@
         <div class="item">
           <h3>Aprendizaje y crecimiento</h3>
           <p>No solo te entregamos un trabajo de calidad, también te brindamos retroalimentación y orientación
-            para que mejores tus habilidades investigativas. Con nosotros, podrás aprender y crecer exponencialmente.</p>
+            para que mejores tus habilidades investigativas. Con nosotros, podrás aprender y crecer exponencialmente.
+          </p>
         </div>
-        <button id="next">&#x2b62;</button>
-        <button id="prev">&#x2b60;</button>
+        <button id="next"><img src="/Media/inicio/flechas-a-derecha.png"></button>
+        <button id="prev"><img src="/Media/inicio/flechas-a-izquierda.png"></button>
       </div>
     </div>
   </section>
