--- a/Templates/conocenos.html
+++ b/Templates/conocenos.html
@@ -1,4 +1,71 @@
 <div id="conocenos" class="">
-    <h2>Página de conócenos</h2>
-    <!-- Contenido de la sección de conócenos -->
-  </div>
+  <!-- Contenido de la sección de conócenos -->
+  <section class="conocenosFirstSection">
+    <h2>
+      Conoce Nuestra Empresa
+    </h2>
+    <p>
+      Somos tu socio confiable en el viaje hacia el éxito académico.
+    </p>
+  </section>
+  <section class="conocenosSecondSection">
+    <div class="conocenosSecondSectionContainer">
+      <div class="conocenosSecondSectionContainerText">
+        <p>
+          Descubre cómo podemos ayudarte a alcanzar tus objetivos profesionales. Únete a nosotros y permítenos
+          acompañarte
+          en tu trayecto de crecimiento y pasión por el aprendizaje.
+        </p>
+      </div>
+      <div class="conocenosSecondSectionContainerVideo">
+        <video controls>
+          <source src="/Media/conocenos/Servicios CEAC.mp4">
+        </video>
+      </div>
+    </div>
+  </section>
+  <section class="conocenosThirdSection">
+    <h2>Nuestra Historia</h2>
+    <p>La historia de CEAC (Centro de Estudios y Asesorías Académicas) inició con el impulso y visión de su CEO, Yeiner
+      Herrera, quien durante sus años como estudiante de derecho en la Universidad Popular del Cesar destacó no solo por
+      su desempeño académico sobresaliente, sino también por su habilidad en la producción textual y la investigación
+      científica. Inicialmente, CEAC era un proyecto como cualquier otro que tenían los estudiantes; sin embargo, desde
+      2016 este sueño ha ido cobrando vida, especialmente gracias al entusiasmo, disciplina, determinación, seguridad,
+      compromiso y responsabilidad de todos los colaboradores que han participado en la realización de investigaciones
+      científicas.</p>
+    <p class="conocenosThirdSectionOculto">En la actualidad, ese sueño se ha convertido en realidad; CEAC se ha consolidado como una
+      organización que reúne a numerosos y destacables profesionales líderes en investigación, ofreciendo una amplia
+      gama de servicios de estudios y asesoría académica en diversas áreas del conocimiento. Desde derecho, pedagogía y
+      psicología, hasta programación, ingeniería de sistemas, matemáticas, física, inglés, lenguas castellanas,
+      contabilidad, economía, finanzas, arquitectura, ingeniería civil y medicina.
+      Ahora, se espera que CEAC se convierta en un referente internacional en el ámbito de la investigación y la
+      consultoría académica, destacado por su compromiso con la excelencia y la innovación académica y profesional.</p>
+    <div id="conocenosThirdSectionContainer">
+      <button id="botonMostrarMas" class="learn-more">
+        <span class="circle" aria-hidden="true">
+          <span class="icon arrow"></span>
+        </span>
+        <span class="button-text">Leer más...</span>
+      </button>
+    </div>
+  </section>
+
+  <section class="conocenosFourthSection">
+    <div class="number-bar">
+      <div class="conocenosFourthSectionContainer">
+        <div class="counter">
+          <h2>+<span class="js_count">7</span></h2>
+          <p>Años de experiencia</p>
+        </div>
+        <div class="counter">
+          <h2><span class="js_count">100</span>%</h2>
+          <p>Confiables, ofrecemos todas las garantías</p>
+        </div>
+        <div class="counter">
+          <h2>+<span class="js_count">400</span></h2>
+          <p>Proyectos finalizados</p>
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
