--- a/Templates/preguntasfrecuentes.html
+++ b/Templates/preguntasfrecuentes.html
@@ -1,4 +1,185 @@
 <div id="faqs" class="">
-    <h2>FAQS</h2>
-    <!-- Contenido de la sección de Áreas preguntas frecuentes (FAQS) -->
-  </div>
+
+  <section class="faqsFirstSection">
+    <div class="faqsFirstSectionTitleContainer">
+      <p>
+        ¿Tienes
+      </p>
+      <p>
+        Dudas?
+      </p>
+    </div>
+    <div class="faqsFirstSectionImgContainer">
+      <img src="/Media/faqs/faqsCamisaAzul.png">
+    </div>
+  </section>
+
+  <section id="faqsSecondSection" class="faqsSecondSection">
+    <h3 class="faqsSecondSectionTitle">¿Cómo lo hacemos?</h3>
+    <ol>
+      <li style="--accent-color: #4a6eb0">
+        <div class="icon"><i class="fa-light fa-lightbulb-exclamation-on"></i></div>
+        <div class="title">Precio Personalizado</div>
+        <div class="descr">Escríbenos para obtener una cotización personalizada. Proporciona los detalles de tu
+          proyecto, incluyendo la naturaleza del trabajo, el nivel académico, la extensión, y cualquier requisito
+          específico que tengas. Nuestro equipo revisará tu solicitud y te proporcionará una cotización detallada y
+          personalizada.</div>
+      </li>
+      <li style="--accent-color: #297374">
+        <div class="icon"><i class="fa-light fa-flower-daffodil"></i></div>
+        <div class="title">Consulta y Discusión</div>
+        <div class="descr">Una vez que recibas la cotización, estaremos disponibles para discutir cualquier pregunta que
+          tengas y para aclarar los detalles adicionales de tu proyecto. Estamos aquí para garantizar que tengas toda la
+          información que necesitas antes de tomar una decisión.</div>
+      </li>
+      <li style="--accent-color: #0799b6">
+        <div class="icon"><i class="fa-light fa-chart-line-up"></i></div>
+        <div class="title">Confirmación y Asignación</div>
+        <div class="descr">Después de discutir los detalles y estar satisfecho con la cotización, puedes confirmar tu
+          pedido. Una vez confirmado, asignaremos a un escritor con experiencia en el área temática de tu proyecto. Te
+          informaremos sobre el escritor asignado y comenzaremos a trabajar en tu proyecto de inmediato.</div>
+      </li>
+      <li style="--accent-color: #014257">
+        <div class="icon"><i class="fa-light fa-chart-line-up"></i></div>
+        <div class="title">Confirmación y Asignación</div>
+        <div class="descr">Después de discutir los detalles y estar satisfecho con la cotización, puedes confirmar tu
+          pedido. Una vez confirmado, asignaremos a un escritor con experiencia en el área temática de tu proyecto. Te
+          informaremos sobre el escritor asignado y comenzaremos a trabajar en tu proyecto de inmediato.</div>
+      </li>
+    </ol>
+  </section>
+
+
+  <section class="faqsThirdSection">
+    <article class="faqsLeft">
+      <div class="faqsThirdSectioncontainer">
+        <h2>Proceso de Solicitud y Trabajo</h2>
+        <div class="faqsThirdSectionaccordion">
+          <div class="faqsThirdSectionaccordion-item">
+            <button class="faqsThirdSectionacordionButton" id="faqsThirdSectionaccordion-button-1"
+              aria-expanded="false"><span class="faqsThirdSectionaccordion-title">¿Cuál es el proceso para solicitar un
+                trabajo con ustedes?</span><span class="faqsThirdSectionicon" aria-hidden="true"></span></button>
+            <div class="faqsThirdSectionaccordion-content">
+              <p>Para solicitar un trabajo con nosotros, contáctanos por nuestras redes sociales. Proporciona los
+                detalles
+                de tu proyecto y nos pondremos en contacto contigo para discutir los siguientes pasos.</p>
+            </div>
+          </div>
+          <div class="faqsThirdSectionaccordion-item">
+            <button class="faqsThirdSectionacordionButton" id="faqsThirdSectionaccordion-button-2"
+              aria-expanded="false"><span class="faqsThirdSectionaccordion-title">¿Cómo seleccionan al escritor para mi
+                proyecto?</span><span class="faqsThirdSectionicon" aria-hidden="true"></span></button>
+            <div class="faqsThirdSectionaccordion-content">
+              <p>Una vez que recibimos tu solicitud, asignamos un escritor con experiencia en el área temática de tu
+                proyecto. Seleccionamos al escritor más adecuado para garantizar la calidad y la precisión del trabajo.
+              </p>
+            </div>
+          </div>
+          <div class="faqsThirdSectionaccordion-item">
+            <button class="faqsThirdSectionacordionButton" id="faqsThirdSectionaccordion-button-3"
+              aria-expanded="false"><span class="faqsThirdSectionaccordion-title">¿Cuál es el proceso de trabajo una vez
+                que se asigna un escritor a mi proyecto?</span><span class="faqsThirdSectionicon"
+                aria-hidden="true"></span></button>
+            <div class="faqsThirdSectionaccordion-content">
+              <p>Una vez asignado un escritor, comenzará a trabajar en tu proyecto de inmediato. Te mantendremos
+                informado
+                sobre el progreso del trabajo y estarás en contacto directo con el escritor para cualquier consulta o
+                aclaración.</p>
+            </div>
+          </div>
+          <div class="faqsThirdSectionaccordion-item">
+            <button class="faqsThirdSectionacordionButton" id="faqsThirdSectionaccordion-button-4"
+              aria-expanded="false"><span class="faqsThirdSectionaccordion-title">¿Puedo enviar material adicional o
+                instrucciones específicas después de haber solicitado el trabajo?</span><span
+                class="faqsThirdSectionicon" aria-hidden="true"></span></button>
+            <div class="faqsThirdSectionaccordion-content">
+              <p>Sí, puedes enviar material adicional o instrucciones específicas en cualquier momento durante el
+                proceso
+                de trabajo. Simplemente contáctanos y haremos los ajustes necesarios según tus requisitos.</p>
+            </div>
+          </div>
+          <div class="faqsThirdSectionaccordion-item">
+            <button class="faqsThirdSectionacordionButton" id="faqsThirdSectionaccordion-button-5"
+              aria-expanded="false"><span class="faqsThirdSectionaccordion-title">¿Qué sucede si necesito realizar una
+                consulta adicional sobre mi proyecto durante el proceso de trabajo?</span><span
+                class="faqsThirdSectionicon" aria-hidden="true"></span></button>
+            <div class="faqsThirdSectionaccordion-content">
+              <p>Estamos aquí para ayudarte en cualquier etapa del proceso. Si necesitas realizar alguna consulta
+                adicional o tienes preguntas sobre el progreso de tu proyecto, no dudes en comunicarte con nosotros.
+                Nuestro equipo estará encantado de brindarte la asistencia necesaria para garantizar la realización
+                exitosa de tu trabajo.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </article>
+
+    <article class="faqsRight">
+      <div class="faqsThirdSectioncontainer">
+        <h2> Tiempo de Entrega y Calidad del Trabajo</h2>
+        <div class="faqsThirdSectionaccordion">
+          <div class="faqsThirdSectionaccordion-item">
+            <button class="faqsThirdSectionacordionButton" id="faqsThirdSectionaccordion-button-1"
+              aria-expanded="false"><span class="faqsThirdSectionaccordion-title">¿Cuál es el tiempo de entrega estimado
+                para mi proyecto?</span><span class="faqsThirdSectionicon" aria-hidden="true"></span></button>
+            <div class="faqsThirdSectionaccordion-content">
+              <p>El tiempo de entrega puede variar según la complejidad del proyecto y los requisitos específicos. Te
+                proporcionaremos una estimación del tiempo de entrega al discutir los detalles de tu proyecto.</p>
+            </div>
+          </div>
+          <div class="faqsThirdSectionaccordion-item">
+            <button class="faqsThirdSectionacordionButton" id="faqsThirdSectionaccordion-button-2"
+              aria-expanded="false"><span class="faqsThirdSectionaccordion-title">¿Cómo puedo realizar seguimiento al
+                progreso de mi trabajo?</span><span class="faqsThirdSectionicon" aria-hidden="true"></span></button>
+            <div class="faqsThirdSectionaccordion-content">
+              <p>Te mantendremos informado sobre el progreso de tu trabajo y estarás en contacto directo con el escritor
+                asignado. Además, puedes comunicarte con nuestro equipo de atención al cliente en cualquier momento para
+                obtener actualizaciones.</p>
+            </div>
+          </div>
+          <div class="faqsThirdSectionaccordion-item">
+            <button class="faqsThirdSectionacordionButton" id="faqsThirdSectionaccordion-button-3"
+              aria-expanded="false"><span class="faqsThirdSectionaccordion-title">¿Cómo se garantiza la calidad de los
+                trabajos entregados?</span><span class="faqsThirdSectionicon" aria-hidden="true"></span></button>
+            <div class="faqsThirdSectionaccordion-content">
+              <p>Todos nuestros trabajos pasan por un riguroso proceso de revisión de calidad antes de ser entregados.
+                Garantizamos la precisión, originalidad y cumplimiento de los estándares académicos en cada proyecto.
+              </p>
+            </div>
+          </div>
+          <div class="faqsThirdSectionaccordion-item">
+            <button class="faqsThirdSectionacordionButton" id="faqsThirdSectionaccordion-button-4"
+              aria-expanded="false"><span class="faqsThirdSectionaccordion-title">¿Qué medidas toman para asegurar la
+                confidencialidad de la información proporcionada en los proyectos?</span><span
+                class="faqsThirdSectionicon" aria-hidden="true"></span></button>
+            <div class="faqsThirdSectionaccordion-content">
+              <p>La confidencialidad de la información de nuestros clientes es una prioridad para nosotros.
+                Implementamos medidas de seguridad robustas para proteger la privacidad y confidencialidad de todos los
+                datos proporcionados en los proyectos. Nuestro equipo se compromete a mantener la confidencialidad de
+                toda la información relacionada con los proyectos, y no compartimos ningún detalle con terceros sin el
+                consentimiento expreso del cliente.</p>
+            </div>
+          </div>
+          <div class="faqsThirdSectionaccordion-item">
+            <button class="faqsThirdSectionacordionButton" id="faqsThirdSectionaccordion-button-5"
+              aria-expanded="false"><span class="faqsThirdSectionaccordion-title">¿Ofrecen algún tipo de garantía de
+                satisfacción?</span><span class="faqsThirdSectionicon" aria-hidden="true"></span></button>
+            <div class="faqsThirdSectionaccordion-content">
+              <p>Sí, nos comprometemos a garantizar la satisfacción de nuestros clientes. Si por alguna razón no estás
+                satisfecho con el trabajo recibido, haremos todo lo posible para corregirlo y asegurarnos de que estés
+                completamente satisfecho con el resultado final.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </article>
+  </section>
+
+  <section class="faqsFourthSection">
+    <div class="fourthSectioncontainer">
+      <h3>¿Te quedan dudas?</h3>
+      <a target="_blank" href="#" class="fourthSectionBtn">Contáctanos</a>
+    </div>
+  </section>
+
+</div>
