--- a/Templates/preguntasfrecuentes.html
+++ b/Templates/preguntasfrecuentes.html
@@ -41,10 +41,11 @@
       </li>
       <li style="--accent-color: #014257">
         <div class="icon"><i class="fa-light fa-chart-line-up"></i></div>
-        <div class="title">Confirmación y Asignación</div>
-        <div class="descr">Después de discutir los detalles y estar satisfecho con la cotización, puedes confirmar tu
-          pedido. Una vez confirmado, asignaremos a un escritor con experiencia en el área temática de tu proyecto. Te
-          informaremos sobre el escritor asignado y comenzaremos a trabajar en tu proyecto de inmediato.</div>
+        <div class="title">Entrega y Revisión</div>
+        <div class="descr">Una vez completado el trabajo, te enviaremos una versión inicial para su revisión. Tendrás la
+          oportunidad de revisar el trabajo y solicitar cualquier cambio o ajuste que consideres necesario. Estamos
+          comprometidos a garantizar tu satisfacción y haremos las revisiones necesarias hasta que estés completamente
+          satisfecho con el resultado final.</div>
       </li>
     </ol>
   </section>
